[package]
name = "nog"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
readme = "README.md"
description = """
(todo) lib for rom, a zettelkasten for the web 📇
"""

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
knuffel = "1.1.0"

[profile.release]
debug = true
