[package]
name = "nog"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
readme = "README.md"
description = """
(todo) lib for rom, a zettelkasten for the web 📇
"""

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
derive_builder = "0.10.2"
git2 = "0.16.1"
hash_set_map = "0.3.3"
hygge = "0.4.0"
sha1 = "0.10.1"

[profile.release]
debug = true
